--- a/officeTrainner/Vista/Vista.csproj
+++ b/officeTrainner/Vista/Vista.csproj
@@ -152,5 +152,8 @@
       <Name>Preguntas</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
