--- a/officeTrainner/Vista/Vista.csproj
+++ b/officeTrainner/Vista/Vista.csproj
@@ -86,6 +86,12 @@
     <Compile Include="FormContinueToExam.Designer.cs">
       <DependentUpon>FormContinueToExam.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormExamResult.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormExamResult.Designer.cs">
+      <DependentUpon>FormExamResult.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,10 +110,19 @@
     <Compile Include="FormStartExam.Designer.cs">
       <DependentUpon>FormStartExam.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTest.Designer.cs">
+      <DependentUpon>FormTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormContinueToExam.resx">
       <DependentUpon>FormContinueToExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormExamResult.resx">
+      <DependentUpon>FormExamResult.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
@@ -117,6 +132,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormStartExam.resx">
       <DependentUpon>FormStartExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTest.resx">
+      <DependentUpon>FormTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
