--- a/officeTrainner/Datos/Datos.csproj
+++ b/officeTrainner/Datos/Datos.csproj
@@ -55,6 +55,11 @@
     <Compile Include="ArrayOrdenPreguntas.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="DsReportes\DsImprResultados.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DsImprResultados.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Examen.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -86,6 +91,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+    <None Include="DsReportes\DsImprResultados.xsc">
+      <DependentUpon>DsImprResultados.xsd</DependentUpon>
+    </None>
+    <None Include="DsReportes\DsImprResultados.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DsImprResultados.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DsReportes\DsImprResultados.xss">
+      <DependentUpon>DsImprResultados.xsd</DependentUpon>
+    </None>
     <None Include="Model.edmx.diagram">
       <DependentUpon>Model.edmx</DependentUpon>
     </None>
@@ -107,5 +123,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
