--- a/officeTrainner/Vista/App.config
+++ b/officeTrainner/Vista/App.config
@@ -5,8 +5,12 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<connectionStrings>
-		<add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HANTER-PC;initial catalog=OfficeTrainner;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+  <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HANTER-PC;initial catalog=OfficeTrainner;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+   providerName="System.Data.EntityClient" />
+  <add name="Vista.Properties.Settings.OfficeTrainnerConnectionString"
+   connectionString="Data Source=HANTER-PC;Initial Catalog=OfficeTrainner;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
 			<parameters>
